feat: use grid layout

--- a/index.html
+++ b/index.html
@@ -125,6 +125,33 @@
                 <p>羽毛球</p>
               </div>
             </div>
+            <div class="card">
+              <img
+                src="https://th.bing.com/th/id/R.229821a5d52c9c10695eec249a26cda1?rik=yPDUXXjzCP3iBQ&riu=http%3a%2f%2fimg.mrco.cn%2fQgjtUMNGhqkpp3vYIu7CADLi.png&ehk=E0N33u%2fkny1Q8VBN6gu9%2bH4ai3F5zhF%2f9aSDsXXVQ0E%3d&risl=&pid=ImgRaw&r=0"
+                alt="js/ts"
+              />
+              <div class="card-title">
+                <p>摄影</p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="https://th.bing.com/th/id/R.ed7966b1c555aa7e219dd0eb11530e14?rik=aUVsPittrtFncA&riu=http%3a%2f%2fimg.daimg.com%2fuploads%2fallimg%2f160123%2f1-160123002004.jpg&ehk=zghlbVOc%2b6Ejk8RSRS5peoYmoYic6CHhdKyqcFpPqG4%3d&risl=&pid=ImgRaw&r=0"
+                alt="html"
+              />
+              <div class="card-title">
+                <p>骑行</p>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="https://th.bing.com/th/id/OIP.ZTEw90TclD4VmkRiA10yigHaE8?pid=ImgDet&rs=1"
+                alt="js/ts"
+              />
+              <div class="card-title">
+                <p>乒乓球</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
